--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,67 @@
     padding:0;
     box-sizing:border-box;
 }
+
+.wrapper{
+    overflow:hidden;
+    background: #f6f6f6;
+}
+
+.top-wave{
+    top:-70px;
+}
+
+.bottom-wave{
+    bottom:-50px;
+}
+
+.form-wrapper {
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 450px;
+	
+	z-index: 1;
+	box-shadow: 3px 4px 24px rgba(0,0,0,0.20);
+	border-radius: 8px;
+	padding: 25px;
+}
+
+.field-con .icon {
+	top: 12px;
+	left: 15px;
+}
+
+.form-wrapper .form-control {
+	height: 45px !important;
+}
+
+.form-wrapper i {
+	color: dodgerblue;
+	font-size: 20px;
+}
+
+.form-wrapper input {
+	padding-left: 46px !important;
+    color:#000;
+    
+}
+
+.form-wrapper input:focus {
+	box-shadow:none;
+    
+}
+
+.ct-btn{
+    padding: 10px 40px;
+    margin-top:10px;
+}
+
+.other-link{
+    padding-top: 30px;
+    color:blue;
+}
+
+.error{
+    color:#D0342C;
+}
